Upgrade projekt dependencies + command / db refactoring (#65)
* Initial commit

* Transformed classes to JDA 5 Part I

* Transformed classes to JDA 5 Part II

* Removed old dependency + Refactored format Strings

* Removed unused responses

* Removed unused imports

* Various refactorings

* fixed string formatting

* Refactored commanddata for better readability

* Changed db init + fixed wrong formatted translations

* Updated botjar

* Updated DB class to latest version

* Updated jar

* Fixed broken character in DE translation

* Refactored ISlashCommand into seperate user and info classes

* Added clause to allow user to use init command

* Minor refactoring + reformatted code

* Update Alpagotchi-jar-with-dependencies.jar

* Refactored DB Methods

* Fixed logger format